# coreio

./: CMakeLists.txt  listconfig.h.in  setting.nn
src/: func.hxx  main.cc
src/print/: print.hxx
